# K-Means-Clustering-CUDA

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Input.csv  Makefile  OutputGPU.csv  README.md  chartCluster.py  cmake_install.cmake  correct output  cpu_k_means_clustering.txt  kernal  kernal.cpp  kernal.cu  mainCudaApp  output.csv  outputcpu.csv  outputthurst.csv  train0.csv  train0.txt  train1.csv  train1.txt  train2.csv  train2.txt  train3.csv  train4.csv  train5.txt
include/: Config.h  Constants.h  CudaCheckError.h  DataPoints.h  FindClosestCentriods.h  GeneratePoints.h  KMeansCpu.h  KMeansGpu.h  KMeansGpuThrust.h  Timer.h  cudaCheckError.h  dataPoints.h  findClosestCentriods.h  kMeansCpu.h  kMeansGpu.h  kMeansGpuThrust.h  timer.h
includes/: pt.h
src/: Constants.cu  DataPoints.cu  FindClosestCentriods.cu  GeneratePoints.cu  KMeansCpu.cu  KMeansGpu.cu  KMeansGpuThrust.cu  Kernel.cu  Timer.cu  dataPoints.cu  findClosestCentriods.cu  kMeansCpu.cu  kMeansGpu.cu  kMeansGpuThrust.cu  kernel.cu  timer.cu
test/: Makefile  findgllib.mk  simpleGL  simpleGL.cu
test/Common/: helper_functions.h  helper_image.h  helper_timer.h
